--- a/prometheus.yml
+++ b/prometheus.yml
@@ -3,8 +3,13 @@ global:
   scrape_timeout: 10s
 
 scrape_configs:
-  - job_name: services
+  - job_name: flask
     metrics_path: /metrics
     static_configs:
       - targets:
           - 'flask:5000'
+  - job_name: nginx
+    metrics_path: /metrics
+    static_configs:
+      - targets:
+          - 'nginx-exporter:4040'
