--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,10 @@
 version: "3.2"
 services:
-  nginx:
-    restart: on-failure
-    image: nginx:1.19.7-alpine
-    volumes:
-       - ./flask.conf:/etc/nginx/conf.d/default.conf
-       - /tmp/log/nginx/flask/access.log:/var/log/nginx/flask/access.log
-    ports:
-      - 80:80
-  nginx-exporter:
-    restart: on-failure
-    image: quay.io/martinhelmich/prometheus-nginxlog-exporter
-    command: ["/var/log/nginx/flask/access.log"]
-    volumes:
-       - ./nginx_exporter.hcl:/etc/prometheus-nginxlog-exporter.hcl
-       - /tmp/log/nginx/flask/access.log:/var/log/nginx/flask/access.log:ro
-    ports:
-      - 4040:4040
   flask:
     restart: on-failure
     image: nubacuk/devops-flask-test
     ports:
-      - 127.0.0.1:5000:5000
+      - 5000:5000
   prometheus:
     restart: on-failure
     image: prom/prometheus:v2.25.0
@@ -40,4 +23,4 @@ services:
       - 3000:3000
   bench:
     image: jordi/ab
-    command: ["-n 1000", "-c 100", "http://nginx/"]
+    command: ["-n 2000", "-c 200", "http://flask:5000/"]
